--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -5,7 +5,7 @@ on:
     types: [vpn_request]
 
 jobs:
-  setup:
+  vpn:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -24,19 +24,15 @@ jobs:
       - name: Verify Terraform Installation
         run: terraform --version
 
-  extract_data:
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      
       - name: Extract VPN Request Data
         run: |
           echo "Extracting data from GitHub event..."
+          
+          # Extract JSON from payload
           EXTRA_DATA_JSON='${{ github.event.client_payload.extra_data }}'
           echo "Extracted JSON: $EXTRA_DATA_JSON"
 
+          # Extract variables
           ipv4_cidr=$(echo "$EXTRA_DATA_JSON" | jq -r '.ipv4_cidr')
           customer_name="${{ github.event.client_payload.customer_name }}"
           integrity_phase2=$(echo "$EXTRA_DATA_JSON" | jq -r '.integrity_phase2')
@@ -44,68 +40,128 @@ jobs:
           life_time_renegotiation=$(echo "$EXTRA_DATA_JSON" | jq -r '.life_time_renegotiation')
           ike_version_phase2=$(echo "$EXTRA_DATA_JSON" | jq -r '.ike_version_phase2')
           customer_gateway_ip=$(echo "$EXTRA_DATA_JSON" | jq -r '.customer_gateway_ip')
+          others=$(echo "$EXTRA_DATA_JSON" | jq -r '.others')
+          contact_person=$(echo "$EXTRA_DATA_JSON" | jq -r '.contact_person')
+          contact_person_email=$(echo "$EXTRA_DATA_JSON" | jq -r '.contact_person_email')
+          firewall_vendor=$(echo "$EXTRA_DATA_JSON" | jq -r '.firewall_vendor')
+          device_details=$(echo "$EXTRA_DATA_JSON" | jq -r '.device_details')
+          firewall_version=$(echo "$EXTRA_DATA_JSON" | jq -r '.firewall_version')
           vpn_routing="${{ github.event.client_payload.vpn_routing }}"
           asn="${{ github.event.client_payload.asn }}"
+          encryption_phase1="${{ github.event.client_payload.encryption_phase1 }}"
+          encryption_phase2="${{ github.event.client_payload.encryption_phase2 }}"
+          integrity_phase1="${{ github.event.client_payload.integrity_phase1 }}"
+          dh_group_phase1="${{ github.event.client_payload.dh_group_phase1 }}"
+          lifetime_phase1="${{ github.event.client_payload.lifetime_phase1 }}"
+          ike_version_phase1="${{ github.event.client_payload.ike_version_phase1 }}"
 
-          echo "IPV4_CIDR=$ipv4_cidr" >> "$GITHUB_ENV"
-          echo "customer_name=$customer_name" >> "$GITHUB_ENV"
-          echo "integrity_phase2=$integrity_phase2" >> "$GITHUB_ENV"
-          echo "dh_group_phase2=$dh_group_phase2" >> "$GITHUB_ENV"
-          echo "life_time_renegotiation=$life_time_renegotiation" >> "$GITHUB_ENV"
-          echo "ike_version_phase2=$ike_version_phase2" >> "$GITHUB_ENV"
-          echo "customer_gateway_ip=$customer_gateway_ip" >> "$GITHUB_ENV"
-          echo "vpn_routing=$vpn_routing" >> "$GITHUB_ENV"
-          echo "asn=$asn" >> "$GITHUB_ENV"
+          echo "CIDR: $ipv4_cidr"
+          echo "customer_name: $customer_name"
+          echo "integrity_phase2: $integrity_phase2"
+          echo "dh_group_phase2: $dh_group_phase2"
+          echo "life_time_renegotiation: $life_time_renegotiation"
+          echo "ike_version_phase2: $ike_version_phase2"
+          echo "customer_gateway_ip: $customer_gateway_ip"
+          echo "others: $others"
+          echo "contact_person: $contact_person"
+          echo "contact_person_email: $contact_person_email"
+          echo "firewall_vendor: $firewall_vendor"
+          echo "device_details: $device_details"
+          echo "firewall_version: $firewall_version"
+          echo "vpn_routing: $vpn_routing"
+          echo "asn: $asn"
+          echo "encryption_phase1: $encryption_phase1"
+          echo "encryption_phase2: $encryption_phase2"
+          echo "integrity_phase1: $integrity_phase1"
+          echo "dh_group_phase1: $dh_group_phase1"
+          echo "lifetime_phase1: $lifetime_phase1"
+          echo "ike_version_phase1: $ike_version_phase1"
 
-  check_cidr:
-    runs-on: ubuntu-latest
-    needs: extract_data
-    outputs:
-      overlap: ${{ steps.check.outputs.overlap }}
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+          # Export values for next steps
+          {
+            echo "IPV4_CIDR=$ipv4_cidr"
+            echo "customer_name=$customer_name"
+            echo "integrity_phase2=$integrity_phase2"
+            echo "dh_group_phase2=$dh_group_phase2"
+            echo "life_time_renegotiation=$life_time_renegotiation"
+            echo "ike_version_phase2=$ike_version_phase2"
+            echo "customer_gateway_ip=$customer_gateway_ip"
+            echo "others=$others"
+            echo "contact_person=$contact_person"
+            echo "contact_person_email=$contact_person_email"
+            echo "firewall_vendor=$firewall_vendor"
+            echo "device_details=$device_details"
+            echo "firewall_version=$firewall_version"
+            echo "vpn_routing=$vpn_routing"
+            echo "asn=$asn"
+            echo "encryption_phase1=$encryption_phase1"
+            echo "encryption_phase2=$encryption_phase2"
+            echo "integrity_phase1=$integrity_phase1"
+            echo "dh_group_phase1=$dh_group_phase1"
+            echo "lifetime_phase1=$lifetime_phase1"
+            echo "ike_version_phase1=$ike_version_phase1"
+          } >> "$GITHUB_ENV"
 
+          ######Terraform Vars###########
+          {
+            echo "TF_VAR_customer_name=$customer_name"
+            echo "TF_VAR_ipv4_cidr=$ipv4_cidr"
+            echo "TF_VAR_integrity_phase2=$integrity_phase2"
+            echo "TF_VAR_dh_group_phase2=$dh_group_phase2"
+            echo "TF_VAR_life_time_renegotiation=$life_time_renegotiation"
+            echo "TF_VAR_ike_version_phase2=$ike_version_phase2"
+            echo "TF_VAR_customer_gateway_ip=$customer_gateway_ip"
+            echo "TF_VAR_vpn_routing=$vpn_routing"
+            echo "TF_VAR_asn=$asn"
+            echo "TF_VAR_encryption_phase1=$encryption_phase1"
+            echo "TF_VAR_encryption_phase2=$encryption_phase2"
+            echo "TF_VAR_integrity_phase1=$integrity_phase1"
+            echo "TF_VAR_dh_group_phase1=$dh_group_phase1"
+            echo "TF_VAR_lifetime_phase1=$lifetime_phase1"
+            echo "TF_VAR_ike_version_phase1=$ike_version_phase1"
+          } >> "$GITHUB_ENV"
+
+
+
+          #####echo command for terraform#####
+          echo "Terraform Variables Set:"
+          echo "TF_VAR_customer_name=$customer_name"
+          echo "TF_VAR_ipv4_cidr=$ipv4_cidr"
+          echo "TF_VAR_integrity_phase2=$integrity_phase2"
+          echo "TF_VAR_dh_group_phase2=$dh_group_phase2"
+          echo "TF_VAR_life_time_renegotiation=$life_time_renegotiation"
+          echo "TF_VAR_ike_version_phase2=$ike_version_phase2"
+          echo "TF_VAR_customer_gateway_ip=$customer_gateway_ip"
+          echo "TF_VAR_vpn_routing=$vpn_routing"
+          echo "TF_VAR_asn=$asn"
+          echo "TF_VAR_encryption_phase1=$encryption_phase1"
+          echo "TF_VAR_encryption_phase2=$encryption_phase2"
+          echo "TF_VAR_integrity_phase1=$integrity_phase1"
+          echo "TF_VAR_dh_group_phase1=$dh_group_phase1"
+          echo "TF_VAR_lifetime_phase1=$lifetime_phase1"
+          echo "TF_VAR_ike_version_phase1=$ike_version_phase1"
+
+          
       - name: Install Dependencies
         run: pip install boto3
 
-      - name: Debug Check - List Files
-        run: ls -la
-
-      - name: Ensure check_cidr.py is Executable
-        run: chmod +x ./check_cidr.py
-
       - name: Run CIDR Overlap Check
-        id: check
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: "us-east-1"
           SNS_TOPIC_ARN: "arn:aws:sns:us-east-1:590184024707:tyfone-poc"
         run: |
-          if [ ! -f ./check_cidr.py ]; then
-            echo "Error: check_cidr.py not found in $(pwd)!"
-            exit 1
-          fi
-          output=$(python3 ./check_cidr.py)
+          output=$(python check_cidr.py)
           echo "$output"
           if echo "$output" | grep -q "overlap=false"; then
             echo "overlap=false" >> "$GITHUB_ENV"
-            echo "::set-output name=overlap::false"
           else
             echo "overlap=true" >> "$GITHUB_ENV"
-            echo "::set-output name=overlap::true"
           fi
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: check_cidr
-    if: needs.check_cidr.outputs.overlap == 'false'
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      
       - name: Trigger Terraform (if no overlap)
+        if: env.overlap == 'false'
         run: |
           echo "No CIDR overlap detected. Proceeding with Terraform deployment..."
           terraform init -backend-config="key=${customer_name}.tfstate"
